// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpenseSummary multiple expenses totaling $94.34 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totaling 
    $0.94
  </h1>
</div>
`;

exports[`should correctly render ExpenseSummary with 1 expense totaling $94.34 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2.35
  </h1>
</div>
`;
